# gdocs-edit

./: .gitignore  README.md  pyproject.toml
gdocs_edit/: cli.py  docs.py  gws.py  styles.py
