[project]
name = "gdocs-edit"
version = "0.1.0"
description = "CLI for editing Google Docs via the Google Workspace CLI (gws)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Joshua Swanson" }]
requires-python = ">=3.10"
dependencies = []
keywords = ["google-docs", "cli", "gws", "google-workspace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/joshuaswanson/gdocs-edit"
Repository = "https://github.com/joshuaswanson/gdocs-edit"
Issues = "https://github.com/joshuaswanson/gdocs-edit/issues"

[project.scripts]
gdocs = "gdocs_edit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gdocs_edit"]
